# ansible-mysql-dynamic-inventory

./: .gitignore  README.md  inventory_mgr.py  mysql_dynamic_inventory.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  requirements.yml
.github/workflows/: default.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml
tasks/: agent.yml  db_setup.yml  main.yml
templates/: sample.sql  schema.sql  schema.sql.j2
tests/: test.yml
vars/: main.yml
